# SnapCap

./: .gitignore  Cargo.toml  Neon.md  Notes.md  README.md  package-lock.json  package.json  snapcap.js
commands/: CommandNotes.md  berniesasking.js  disastergirl.js  everywhere.js  gigachad.js  ping.js  skeletonwaiting.js  skepticalkid.js
logs/: logger.js  template_age.json  tracker.json
output/: OutputNotes.md
src/: captionator.rs  lib.rs
src/modules/: berniesasking.rs  disastergirl.rs  everywhere.rs  gigachad.rs  mod.rs  skeletonwaiting.rs  skepticalkid.rs
