[package]
name = "snapcap"
version = "0.1.0"
description = "Discord Bot that Allows you to Quickly Caption Images. "
authors = ["Rylan Yancey"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"
imageproc = "0.22.0"
image = "0.23.14"
rusttype = "0.9.2"
artano = "0.3.5"
chrono = "0.4.19"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
